--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -7,14 +7,14 @@
                 "data_id": "standardized",
                 "seed_range": [
                     1,
-                    2
+                    1
                 ]
             },
             {
                 "graph_id": "jackdag.csv",
-                "parameters_id": null,
-                "data_id": "jackdata.csv",
-                "seed_range": null
+                "parameters_id": "jackparams.csv",
+                "data_id": "standardized",
+                "seed_range": [1, 1]
             }
         ],
         "evaluation": {
