--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -24,13 +24,11 @@ if os.path.isdir("results/bn/bn.fit_networks"):
 else:
     shutil.copytree("resources/bn", "results/bn")
 
+if os.path.isdir("results/bn/sem_params"):
+    sync("resources/bn/sem_params", "results/bn/sem_params", "sync")
+else:
+    shutil.copytree("resources/bn/sem_params", "results/bn/sem_params")
 
-#if os.path.isdir("results/adjmat/myadjmats"):
-#    pass
-    #sync("resources/adjmat/myadjmats", "results/adjmat/myadjmats", "sync")
-#else:
-#    os.makedirs('results/adjmat/myadjmats')
-    #shutil.copytree("resources/adjmat", "results/adjmat")
 
 
 configfilename="config/config.json"
